images now use inputstream, so images can be found in prod